spacing issue

--- a/public/css/home/style.css
+++ b/public/css/home/style.css
@@ -421,7 +421,7 @@ ol.type li a:hover {
 }
 
 #legal{
-	padding: 100px 0;
+	padding: 100px 15px;
 	background: #fff;
 }
 
